--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -10,7 +10,7 @@
   animation: load7 1.8s infinite ease-in-out;
 }
 .Spinner {
-  color: #ec6f31;
+  color: #4A611D;
   font-size: 10px;
   margin: 80px auto;
   position: relative;
