--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -1,7 +1,7 @@
 .Toolbar {
   display: flex;
   justify-content: space-between;
-  font-family: 'Courgette', cursive;
+  font-family: 'Balsamiq Sans', cursive;
   background-color: #8F3132;
 }
 
