--- a/src/components/UI/Logo/Logo.module.css
+++ b/src/components/UI/Logo/Logo.module.css
@@ -8,7 +8,7 @@
   width: 50px;
 }
 .Logo span {
-  font-family: 'Courgette', cursive;
+  font-family: 'Balsamiq Sans', cursive;
   color: white;
   font-size: 2.5rem;
 }
