--- a/src/components/UI/Navigation/Navigation.module.css
+++ b/src/components/UI/Navigation/Navigation.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   margin: 10px 0;
   padding: 0;
-  font-family: 'Courgette', cursive;
+  font-family: 'Balsamiq Sans', cursive;
 }
 
 @media (min-width: 500px) {
