--- a/src/components/UI/Navigation/NavigationItem/NavigationItem.module.css
+++ b/src/components/UI/Navigation/NavigationItem/NavigationItem.module.css
@@ -4,7 +4,7 @@
   padding: 1rem;
   height: 50px;
 
-  font-family: 'Courgette', cursive;
+  font-family: 'Balsamiq Sans', cursive;
   text-decoration: none;
   color: white;
   font-size: 1.5rem;
