--- a/src/components/CakeBuilder/CakeKit/Cake/Cake.module.css
+++ b/src/components/CakeBuilder/CakeKit/Cake/Cake.module.css
@@ -27,7 +27,7 @@
   background-size: 50px;
 }
 .lemonDrop {
-  background-image: url(../../../../assets/eee.jpg);
+  background-image: url(../../../../assets/rrr.png);
   background-size: 50px;
 }
 
