--- a/src/components/CakeBuilder/CakeKit/Cake/Cake.module.css
+++ b/src/components/CakeBuilder/CakeKit/Cake/Cake.module.css
@@ -16,18 +16,18 @@
 }
 .mocha {
   background-image: url(../../../../assets/cake.png);
-  background-size: 65px;
+  background-size: 60spx;
 }
 .keyLime {
   background-image: url(../../../../assets/ret.png);
-  background-size: 50px;
+  background-size: 90px;
 }
 .checolateWhite {
   background-image: url(../../../../assets/www.png);
   background-size: 50px;
 }
 .lemonDrop {
-  background-image: url(../../../../assets/rrr.png);
+  background-image: url(../../../../assets/qqq.png);
   background-size: 50px;
 }
 
