--- a/src/components/CakeBuilder/CakeControls/CakeControls.module.css
+++ b/src/components/CakeBuilder/CakeControls/CakeControls.module.css
@@ -1,6 +1,6 @@
 .CakeControls {
-  border: 3px solid  #7D070B;
-  background-color: #5C151F;
+  border: 3px solid  #EAC7C1;
+  background-color: #EAC7C1;
 
   padding: 1rem 2rem;
   margin: 0 .5rem;
